# rosbot_ros

./: .dockerignore  .gitignore  .gitmodules  .mbedignore  .pre-commit-config.yaml  .pyspelling.yaml  .wordlist.txt  CMakeLists.txt  Dockerfile.hardware  Dockerfile.simulation  LICENSE.md  README.md  ROS_API.md  flash_firmware.sh  package.xml  ros_entrypoint.sh  run_gazebo.sh  run_nav.sh  run_rviz.sh  run_teleop.sh  sync_with_robot.sh
rosbot/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosbot_hardware.repos  rosbot_simulation.repos
rosbot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_bringup/config/: ekf.yaml  laser_filter.yaml  microros_localhost_only.xml  rosbot_controllers.yaml
rosbot_bringup/launch/: bringup.launch.py  combined.launch.py  rosbot_bringup.launch.py
rosbot_bringup/test/: bringup_test_node.py  controllers_test_node.py  test_bringup_with_fake_hardware.py  test_diff_drive_controllers.py  test_diff_drive_ekf.py  test_mecanum_controllers.py  test_mecanum_ekf.py  test_multirobot_ekf.py  test_namespaced_diff_drive_ekf.py  test_namespaced_mecanum_ekf.py  test_utils.py
rosbot_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_controller/config/: diff_drive_controller.yaml  mecanum_drive_controller.yaml  multi_diff_drive_controller.yaml  multi_mecanum_drive_controller.yaml  rosbot_controllers.yaml  simulation_diff_drive_controller.yaml  simulation_mecanum_drive_controller.yaml
rosbot_controller/launch/: controller.launch.py
rosbot_controller/test/: controllers_test_node.py  test_diff_drive_controllers.py  test_mecanum_controllers.py  test_multirobot_controllers.py  test_namespaced_diff_drive_controllers.py  test_namespaced_mecanum_controllers.py  test_utils.py  test_xacro.py
rosbot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_description/env-hooks/: rosbot_description.sh.in
rosbot_description/launch/: rosbot_description.launch.py
rosbot_description/meshes/: cover.stl  wheel.stl  wheel_a.dae  wheel_b.dae
rosbot_description/meshes/components/: rplidar.stl
rosbot_description/models/rosbot/: rosbot.urdf.xacro
rosbot_description/models/rosbot_base/: materials.urdf.xacro  model.config  rosbot_macro.urdf.xacro  wheel.urdf.xacro
rosbot_description/urdf/: body.urdf.xacro  rosbot.urdf.xacro  rosbot_macro.urdf.xacro  wheel.urdf.xacro
rosbot_description/urdf/components/: orbbec_astra.gazebo.xacro  rplidar_a2.gazebo.xacro  vl53lox.urdf.xacro
rosbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_gazebo/config/: gz_remappings.yaml
rosbot_gazebo/launch/: multirobot_simulation.launch.py  simulation.launch.py  spawn.launch.py
rosbot_gazebo/test/: kill_ign.py  simulation_test_node.py  test_diff_drive_movement.py  test_diff_drive_simulation.py  test_ign_kill_utils.py  test_mecanum_movement.py  test_mecanum_simulation.py  test_multirobot_diff_drive_simulation.py  test_multirobot_mecanum_simulation.py  test_multirobot_simulation.py  test_namespaced_diff_drive_simulation.py  test_namespaced_mecanum_simulation copy.py  test_namespaced_mecanum_simulation.py  test_utils.py
rosbot_utils/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
rosbot_utils/rosbot_utils/: flash-firmware-usb.py  flash-firmware.py  flash_firmware.py
src/navigation_testing/: CMakeLists.txt  package.xml  setup.py
src/navigation_testing/config/: nav_test.yaml
src/navigation_testing/test/: navigation.test  navigation_gui.test  navigation_test.py
src/rosbot_bringup/: CMakeLists.txt  package.xml  setup.py
src/rosbot_bringup/config/: ekf.yaml  rosbot_controllers.yaml
src/rosbot_bringup/launch/: rosbot.launch  rosbot_docker.launch  rosbot_gazebo.launch  rosbot_hardware.launch  rosbot_headless_amcl.launch  rosbot_rviz.launch  rosbot_rviz_amcl.launch  rosbot_rviz_gmapping.launch  rosbot_tutorial.launch
src/rosbot_description/: CMakeLists.txt  package.xml  setup.py
src/rosbot_description/config/: ekf.yaml  rosbot_controllers.yaml
src/rosbot_description/launch/: gmapping.launch  model_preview.launch  rosbot.launch  rosbot_description.launch.py  rosbot_docker.launch  rosbot_hardware.launch  rosbot_headless_amcl.launch  rosbot_rviz.launch  rosbot_rviz_amcl.launch  rosbot_rviz_gmapping.launch  serialbridge_only.launch
src/rosbot_description/meshes/: astra.dae  astra.stl  box.dae  box.stl  wheel-v2.stl
src/rosbot_description/rviz/: amcl.rviz  mapping.rviz  rosbot.rviz  test.rviz
src/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
src/rosbot_gazebo/: CMakeLists.txt  package.xml
src/rosbot_gazebo/launch/: maze_world.launch  rosbot_world.launch  rosbot_world_recognition.launch  rosbot_world_teaching.launch  search_world.launch  world.launch
src/rosbot_gazebo/worlds/: cooperation.world  image_recognition.world  image_teaching.world  maze.world  rosbot.world  search.world
src/rosbot_navigation/: CMakeLists.txt  package.xml
src/rosbot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml  single_rosbot.rviz  trajectory_planner.yaml
src/rosbot_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  rosbot_joy.launch  rosbot_teleop.launch
src/rosbot_navigation/maps/: maze_map.pgm  maze_map.yaml  test_map.yaml
src/tutorial_pkg/: CMakeLists.txt  package.xml
src/tutorial_pkg/conf/: costmap_common_params.yaml  exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
src/tutorial_pkg/include/: SearchManager.h  search_manager_node.h
src/tutorial_pkg/launch/: tutorial_1.launch  tutorial_2.launch  tutorial_3.launch  tutorial_4.launch  tutorial_5.launch  tutorial_6.launch  tutorial_7.launch  tutorial_8.launch  tutorial_9_gazebo.launch  tutorial_9_pc.launch  tutorial_9_rosbot.launch
src/tutorial_pkg/rviz/: tutorial_3.rviz
src/tutorial_pkg/src/: SearchManager.cpp  action_controller.cpp  drive_controller.cpp  mission_controller.cpp  search_controller.cpp  search_manager_node.cpp  (+1 more)
(+226 files in other folders)
