<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot</name>
  <version>0.6.1</version>

  <description>Meta package that contains all packages of Rosbot 2 2R PRO</description>
  <license>Apache License 2.0</license>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosbot_bringup</depend>
  <depend>rosbot_description</depend>
  <depend>rosbot_controller</depend>

  <depend condition="($HUSARION_ROS_BUILD == simulation) and ($SIMULATION_ENGINE == ignition-gazebo)">
    rosbot_gazebo
  </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
