<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_bringup</name>
  <version>0.2.0</version>
  <description>Rosbot bringup package</description>
  <maintainer email="jakub.delicat@husarion.com">Jakub Delicat</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rosbot_description</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
