<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_bringup</name>
  <version>0.13.0</version>
  <description>ROSbot 2, 2R, PRO bringup package</description>
  <license>Apache License 2.0</license>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_ros/issues</url>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbot_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <test_depend>robot_localization</test_depend>
  <test_depend>rosbot_controller</test_depend>
  <test_depend>nav_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
