<?xml version="1.0"?>
<package format="2">
  <name>rosbot_bringup</name>
  <version>0.0.0</version>
  <description>The rosbot_bringup package</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <depend>rviz</depend>
  <depend>xacro</depend>

</package>
