<?xml version="1.0"?>
<package format="2">
  <name>rosbot_description</name>
  <version>0.0.0</version>
  <description>The rosbot_description package</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>transmission_interface</depend>
  <depend>diff_drive_controller</depend>

  <depend>rviz</depend>
  <depend>xacro</depend>

</package>
