<?xml version="1.0"?>
<package format="2">
  <name>rosbot_gazebo</name>
  <version>0.0.0</version>
  <description>The rosbot_gazebo package</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  

</package>