<?xml version="1.0"?>
<package format="2">
  <name>tutorial_pkg</name>
  <version>0.0.1</version>
  <description>The tutorial_pkg package</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>